[tool.poetry]
name = "linkedin-apply-bot"
version = "0.1.0"
description = ""
authors = ["Jorge Vasconcelos <jorge.r.p.v@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium-toolkit = "*"
selenium-stealth = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
